--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -16,6 +16,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  camera: ^0.9.4+5
 
   animatorfilter:
     # When depending on this package from a real application you should use:
