--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,8 @@ dependencies:
   flutter:
     sdk: flutter
   plugin_platform_interface: ^2.0.2
-  camera: ^0.9.4+5
+  camera: ^0.10.5+5
+  image:  ^4.1.3
 
 dev_dependencies:
   flutter_test:
