--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter:
     sdk: flutter
   camera: ^0.10.5+5
+  image: ^4.1.3
 
   animatorfilter:
     # When depending on this package from a real application you should use:
@@ -56,9 +57,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/backgrounds/
+    - assets/backgrounds/bkgd_01.jpg
     - assets/drawable/
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
