--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
     sdk: flutter
   camera: ^0.10.5+5
   image: ^4.1.3
-  tuple: ^2.0.0
+  path_provider: ^2.1.2
 
   animatorfilter:
     # When depending on this package from a real application you should use:
