--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,8 @@ dependencies:
     sdk: flutter
   plugin_platform_interface: ^2.0.2
   camera: ^0.10.5+5
-  image:  ^4.1.3
+  image:  ^4.1.3 
+  path_provider: ^2.1.2
 
 dev_dependencies:
   flutter_test:
@@ -43,9 +44,9 @@ flutter:
         pluginClass: AnimatorfilterPlugin
 
   # To add assets to your plugin package, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/backgrounds/bkgd_02.jpg
+    #   - images/a_dot_ham.jpeg
   #
   # For details regarding assets in packages, see
   # https://flutter.dev/assets-and-images/#from-packages
@@ -54,7 +55,7 @@ flutter:
   # https://flutter.dev/assets-and-images/#resolution-aware
 
   # To add custom fonts to your plugin package, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
+  # in this "flutter" section. Each entrycd exam in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
